Added generic cards and refactored functions

--- a/ncrypt.Server/Pages/Index.razor
+++ b/ncrypt.Server/Pages/Index.razor
@@ -1,51 +1,93 @@
 ﻿@page "/"
+@using System.Security.Cryptography
+@using System.Reflection
+@using ncrypt.Domain
+@using ncrypt.Library.Cipher
+@using ncrypt.Server.Model
 
 <PageTitle>ncrypt</PageTitle>
 
 <div class="container">
-    <div class="row py-5">
+    <div class="row">
         <div class="col">
             <RadzenCard>
-                <RadzenDataList WrapItems="true" AllowPaging="true" Data="@products" TItem="Product" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
-                    <Template Context="product">
+                <RadzenDataList WrapItems="true" AllowPaging="false" Data="@models" TItem="GenericModel" PageSize="5" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
+                    <Template Context="model">
                         <RadzenCard Style="width: 100%; padding: 0; overflow: hidden;">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-3 p-3 product-title">
-                                            @(product.ProductName)
-                                    </div>
-                                    <div class="col-lg-7 p-3">
-                                        <div class="row d-flex">
-                                            <div class="col-md-6 col-lg-2">
-                                                <h5 class="mb-0">In Stock</h5>
-                                                <p class="mb-sm-2 mb-lg-0">@(product.UnitsInStock)</p>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-3 p-3 product-title">
+                                                @(model.Name)
+                                        </div>
+                                        <div class="col-lg-7 p-3">
+                                            <div class="row d-flex">
+                                                <RadzenSelectBar TValue="String">
+                                                    <Items>
+                                                        @foreach(var method in model.ServiceMethods)
+                                                        {
+                                                            <RadzenSelectBarItem Text="@method.Name"/>
+                                                        }                                                   
+                                                    </Items>
+                                                </RadzenSelectBar>
                                             </div>
-                                            <div class="col-md-6 col-lg-2">
-                                                <h5 class="mb-0">Origin</h5>
-                                                <p class="mb-sm-2 mb-lg-0">@(product.Supplier?.Country)</p>
-                                            </div>
-                                            <div class="col-md-6 col-lg-5">
-                                                <h5 class="mb-0">Sold by</h5>
-                                                <p class="mb-sm-2 mb-lg-0">@(product.Supplier?.CompanyName)</p>
-                                            </div>
-                                            <div class="col-md-6 order-first order-lg-last col-lg-3 text-sm-left text-lg-right mb-3 mb-lg-0">
-                                                <RadzenBadge BadgeStyle="BadgeStyle.Secondary" Class="price-badge" Text=@($"{String.Format(new System.Globalization.CultureInfo("en-US"), "{0:C}", product.UnitPrice)}") />
+                                            <div class="row d-flex">
+                                                @foreach(var prop in model.Properties)
+                                                {
+                                                    <div>
+                                                        <div class="col-md-6 col-lg-2">
+                                                            <h5 class="mb-0">@(prop.Name)</h5>
+                                                            @switch(prop.PropertyType.Name)
+                                                            {
+                                                                case "String": <RadzenTextBox></RadzenTextBox> break;                   
+                                                                case "Int32": <RadzenNumeric TValue="int"></RadzenNumeric> break;
+                                                                case "CipherMode": <RadzenDropDown TValue="String" Data=@modes /> break;                                                                
+                                                            }
+                                                        </div>
+                                                    </div>
+                                                }
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-2 p-3">
-                                        <RadzenButton Text="Order now" Class="w-100" />
+                                        <div class="col-lg-2 p-3">
+                                            <RadzenButton Text="Order now" Class="w-100" />
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </RadzenCard>
-                    </Template>
+                            </RadzenCard>
+                        </Template>    
                 </RadzenDataList>
             </RadzenCard>
         </div>
     </div>
 </div>
 
-@code{
-    
+<style>
+.product-title {
+    min-height: 72px;
+    color: #da0074;
+    background-color: rgba(255, 41, 155, .1);
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 20px;
+    letter-spacing: -0.02em;
+}
+.price-badge {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 8px;
+}
+</style>
+
+@code {
+    List<GenericModel> models = new ();
+    List<String> modes = Enum.GetNames(typeof(CipherMode)).ToList();
+
+    protected override void OnInitialized ()
+    {
+        models = new ()
+        {
+            new ("AES", typeof (AESResult), typeof(AESService)),
+            new ("RSA", typeof (RSAKeyPairResult), typeof(RSAService)),
+        };        
+    }
 }
