--- a/ncrypt.Server/Shared/MainLayout.razor
+++ b/ncrypt.Server/Shared/MainLayout.razor
@@ -12,7 +12,7 @@
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
-        <article class="content px-4">
+        <article class="content" style="padding:10px !important">
             @Body
         </article>
     </main>
