--- a/ncrypt.Server/wwwroot/css/site.css
+++ b/ncrypt.Server/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family:'Century Gothic';
 }
 
 h1:focus {
