Added spacing in sequence list

--- a/ncrypt.Server/Pages/Index.razor
+++ b/ncrypt.Server/Pages/Index.razor
@@ -33,7 +33,7 @@
                             <ul style="list-style:none;padding:0">
                                 @foreach(var model in sequence)
                                 {
-                                    <li>
+                                    <li class="mb-1">
                                         <_GenericCard Model="model"></_GenericCard>
                                     </li>
                                 }
